--- a/skeleton.css
+++ b/skeleton.css
@@ -133,6 +133,9 @@ h4 {
   text-transform: uppercase;
   letter-spacing: .05rem;
 }
+h2 {
+  text-decoration: underline double 2px;
+}
 h2,
 h3 {
 	font-size: 1.3125em;
@@ -146,6 +149,8 @@ h3 {
 }
 h3 {
 	font-weight: normal;
+	font-style: italic;
+  text-decoration: underline 1px;
 }
 h4 {
 	font-size: 1.125em;
@@ -704,7 +709,7 @@ p,
 ul,
 ol,
 form {
-  margin-bottom: 2.5rem; }
+  margin-bottom: 1.2rem; }
 
 
 /* Utilities
