--- a/new-york.css
+++ b/new-york.css
@@ -76,7 +76,7 @@ h1, h2, h3 {
 h4, h5, h6 {
   font-style: italic;
 }
-h2, h3, h4, h5, h6, li, .cm-s-inner, .footnote-line { /* p, */
+h2, h3, h4, h5, h6, .cm-s-inner, .footnote-line { /* p, li, */
   font-size: 16px;
 }
 h1 {
