--- a/new-york.css
+++ b/new-york.css
@@ -33,31 +33,34 @@
   font-family: 'SourceCodePro';
   font-style: normal;
   font-weight: normal;
-  src: url('./new-york/SourceCodePro-Regular.otf');
+  src: url('./new-york/SourceCodePro-Regular.ttf');
 }
 
 @font-face{
   font-family: 'SourceCodePro';
   font-style: normal;
   font-weight: bold;
-  src: url('./new-york/SourceCodePro-Bold.otf');
+  src: url('./new-york/SourceCodePro-Bold.ttf');
 }
 
 
 :root {
 	--active-file-bg-color: #ffffff;
 	--active-file-bg-color: rgba(32, 43, 51, 0.63);
-	--active-file-text-color: Black;
+	--active-file-text-color: #b8bfc6;
 	--bg-color: #333;
-	--text-color: white;
+	--text-color: #111;
+  /*--text-color: #b8bfc6;*/
 	--control-text-color: #444;
+  --md-char-color: #b8bfc6; /*change color of meta characetrs like `*` in markdown */
+  --meta-content-color: #000; /*change color of meta contents like image text or link address in markdown */
 	/*--rawblock-edit-panel-bd: #e5e5e5;*/
-  --text-color: #b8bfc6;
   --primary-color: #6dc1e7;
   --rawblock-edit-panel-bd: #444;
   --side-bar-bg-color: #333;
 	--select-text-bg-color: #c5c9c7;/*rgba(32, 43, 51, 0.63);*/
   --select-text-font-color: #4e5481;
+  --item-hover-text-color: #ffffff;
   --monospace: SourceCodePro; 
 }
 
@@ -99,20 +102,20 @@ h2, h3, h4 {
      text-decoration: underline;
 }
  blockquote, strong {
-     color: #fff;
+     color: #444;
      font-weight: bold;
      font-style: italic; 
 }
  blockquote {
-     margin-left: 30px;
-     margin-right: 30px;
-     padding-top: 20px;
-     padding-bottom: 20px;
-     border-top: 1px solid;
-     border-bottom: 1px solid;
+  margin-left: 30px;
+  margin-right: 30px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-top: 1px solid;
+  border-bottom: 1px solid;
 }
 a, .footnote-line {
-     color: #fff;
+  color: #fff;
 }
 /* em, strong {
   font-style: normal;
@@ -234,5 +237,11 @@ header, .context-menu, .megamenu-content, footer {
 }*/
 
 .md-rawblock-input {
+  color: #333;
+}
+.md-rawblock-input {
   color: black;
+}
+.modal-content {
+  color: dbdcde;
 }
